--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   conditional_builder_null_safety: ^0.0.6
   shared_preferences: ^2.2.2
   fl_chart: ^0.64.0
+  animated_splash_screen: ^1.3.0
   intl: ^0.18.1
   dio: ^5.3.3
   get:
