--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,7 +75,7 @@ dependencies:
   flutter_locales: ^3.0.1
   cached_network_image: ^3.3.0
   share_plus:
-
+  animated_splash_screen:
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -109,6 +109,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/font/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
